Fix Hang top white spaces
A nested and floated element does not collapse margins.

--- a/src/css/content/hang.css
+++ b/src/css/content/hang.css
@@ -9,6 +9,10 @@
   max-width: 30%;
 }
 
+.hang figure {
+  margin-top: 0;
+}
+
 .hang figure img {
   background-color: hsl(0, 0%, 100%);
   padding: var(--space-tiny);
